<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:background="@drawable/background_radius_dialog"
    android:paddingVertical="20dp"
    android:elevation="10dp"
    android:layout_marginHorizontal="20dp"
    android:padding="5dp">
    <TextView
        android:id="@+id/title_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title1_dialog_sign_out"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="#368C8B"/>

    <TextView
        android:layout_below="@+id/title_sign_out"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title2_dialog_sign_out"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/montserrat"/>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_close"
            android:layout_width="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_btn_close"
            android:layout_height="match_parent"
            android:text="@string/btn_close"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:text="@string/btn_sign_out"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:background="@drawable/background_button"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>