<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_calendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/title_bottom_sheet"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_panel"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#D6F0F1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnPreviousYear"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="Previous Year"
                    android:src="@drawable/baseline_keyboard_arrow_left_24"
                    app:tint="@color/green2" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="2024"
                    android:textColor="@color/green"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/btnNextYear"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="Next Year"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:tint="@color/green2" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/gridMonths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:columnCount="3"
                android:rowCount="4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvJanuary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvFebruary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang2"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvMarch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang3"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvApril"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang4"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvMay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang5"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvJune"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang6"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvJuly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang7"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvAugust"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang8"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvSeptember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang9"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvOctober"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang10"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvNovember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang11"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/tvDecember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:text="@string/thang12"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"/>

            </GridLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:text="@string/chart_close"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:background="@drawable/background_btn_close"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnApply"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:text="@string/chart_apply"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:background="@drawable/background_button"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>