<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/back_btn"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="380dp"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background_panel"/>
            <TextView
                android:id="@+id/title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title1_change_pass"
                android:textSize="30dp"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#368C8B"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/label2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_label"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/title2_change_pass"
                android:textAlignment="center"
                android:textColor="#949494" />

            <LinearLayout
                android:id="@+id/input_container"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/label2"
                android:layout_above="@+id/btn_change_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_inputf"
                    android:hint="@string/hint_current_pass"
                    android:paddingVertical="5dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/current_pass"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.65">
                    <TextView
                        android:id="@+id/warning1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Please enter your current pasword"
                        android:textColor="@color/red"
                        android:paddingLeft="5dp"
                        android:visibility="invisible"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_inputf"
                    android:hint="@string/hint_new_pass"
                    android:paddingVertical="5dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_pass"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.65" >
                    <TextView
                        android:id="@+id/warning2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Please enter your new pasword"
                        android:textColor="@color/red"
                        android:paddingLeft="5dp"
                        android:visibility="invisible"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_inputf"
                    android:hint="@string/hint_confirm_password"
                    android:paddingVertical="5dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.65">
                    <TextView
                        android:id="@+id/warning3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Please enter your new pasword again"
                        android:textColor="@color/red"
                        android:paddingLeft="5dp"
                        android:visibility="invisible"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_change_pass"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:layout_marginBottom="40dp"/>
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>